--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  display: flex;
+  align-items: center;
+}
+
+.app textarea {
+  width: 400px;
+  height: 90vh;
+  margin: 5vh 2vw 0;
+  padding: 15px;
+}
+
+.app div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.app button {
+  padding: 5px;
+  height: 30px;
+  margin: 20px 20px 0;
+  font-weight: 700;
+  background: transparent;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.app button:hover {
+  background: rgb(202, 202, 202);
+}
+
+textarea,
+button {
+  border: 3px solid black;
+  border-radius: 0;
+  outline: none;
 }
