--- a/src/index.css
+++ b/src/index.css
@@ -4,43 +4,94 @@
   padding: 0;
   font-family: sans-serif;
 }
-
-.app {
-  display: flex;
-  align-items: center;
+.instruction {
+  padding: 10px;
 }
-
-.app textarea {
-  width: 400px;
-  height: 90vh;
-  margin: 5vh 2vw 0;
-  padding: 15px;
+.instruction * {
+  font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
 }
-
-.app div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.app button {
-  padding: 5px;
-  height: 30px;
-  margin: 20px 20px 0;
-  font-weight: 700;
-  background: transparent;
+.instruction button {
+  height: 40px;
+  margin: 0 0 10px 10px;
+  padding: 10px;
+  border: none;
+  background: rgb(177, 74, 120);
+  color: white;
   cursor: pointer;
-  transition: 0.2s;
 }
-
-.app button:hover {
-  background: rgb(202, 202, 202);
+.instruction .list {
+  overflow: hidden;
+  transition: 0.3s;
 }
-
-textarea,
-button {
-  border: 3px solid black;
-  border-radius: 0;
+.instruction .list.shown {
+  max-height: 1340px;
+  padding-bottom: 20px;
+  border-bottom: 3px solid rgb(177, 74, 120);
+}
+.instruction .list.hidden {
+  max-height: 0;
+}
+.instruction .list p {
+  font-size: 14px;
+}
+.instruction .video {
+  overflow: hidden;
+  transition: 0.3s;
+}
+.instruction .video video {
+  width: 100%;
+}
+.instruction .video.shown {
+  max-height: 600px;
+  padding-bottom: 20px;
+  border-bottom: 3px solid rgb(177, 74, 120);
+}
+.instruction .video.hidden {
+  max-height: 0;
+}
+.areas {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 15px;
+}
+.areas textarea {
+  width: 50%;
+  min-height: 90vh;
+  max-height: 90vh;
+  height: 90vh;
+  padding: 15px;
+  border-radius: 5px;
+  border: none;
   outline: none;
+  background: #272822;
+  color: white;
+  font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
+}
+.areas textarea:nth-of-type(1) {
+  margin-right: 7px;
+}
+.areas textarea:nth-of-type(2) {
+  margin-left: 7px;
+}
+.areas button {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  right: 15px;
+  border: none;
+  background: rgb(177, 74, 120);
+  cursor: pointer;
+}
+.areas button:hover {
+  background: rgb(134, 46, 86);
+}
+.areas button img {
+  width: 50%;
+  height: 50%;
+}
+iframe {
+  width: 100vw;
+  height: 100vh;
+  margin-top: 40px;
+  border: none;
 }
